testcases/negative/unterminated-content-block.otk
OFFICETALK/1.0
DOCTYPE word

AT body/paragraph[1]
INSERT BEFORE <<<
This content block never ends
